--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/images/Yonadhan/portfoliologo.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Yonadhan</title>
   </head>
   <body>
     <div id="root"></div>
